--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "marsa-maroc-dashboard",
+  "homepage": "https://ibtissam-ech.github.io/camera_management",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
@@ -19,6 +20,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.17",
