--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "marsa-maroc-dashboard",
+  "homepage": "https://ibtissam-ech.github.io/marsa_dashboard",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
@@ -18,10 +19,13 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.17",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1"
   },
